syntax = "proto3";

package faceRecognition;

option go_package = "facepb";

option java_package = "com.jjrobot.andy4.facepb";
option java_outer_classname = "FaceSetServicePB";

// faceRecognition.FaceSetService FaceSet数据的管理
//
// FaceSet用于存储管理Face数据以支持相关匹配与搜索功能
//
// 开发管理平台功能参考: http://10.10.10.2/face/face-set
service FaceSetService {
    // NewFaceSet 创建一个FaceSet
    rpc NewFaceSet(NewFaceSetRequest) returns (NewFaceSetResponse) {}

    // DeleteFaceSet 删除FaceSet
    rpc DeleteFaceSet(DeleteFaceSetRequest) returns (DeleteFaceSetResponse) {}

    // UpdateFaceSet 更新FaceSet信息
    rpc UpdateFaceSet(UpdateFaceSetRequest) returns (UpdateFaceSetResponse) {}

    // ListFaceSets 获取FaceSet列表
    rpc ListFaceSets(ListFaceSetsRequest) returns (ListFaceSetsResponse) {}

    // AddFace 识别人脸图片并将结果添加至FaceSet中
    rpc AddFace(AddFaceRequest) returns (AddFaceResponse) {}

    // RemoveFace 从FaceSet中移除Face
    rpc RemoveFace(RemoveFaceRequest) returns (RemoveFaceResponse) {}

    // FaceDetail 获取FaceSet中的Face
    rpc FaceDetail(FaceDetailRequest) returns (FaceDetailResponse) {}

    // ListFaceDetails 获取FaceSet中的Face列表
    rpc ListFaceDetails(ListFaceDetailsRequest) returns (ListFaceDetailsResponse) {}
}

message FaceSet {
    string id = 1;
    string name = 2;
}

message FaceDetail {
    string face_token = 1;
    bytes face_img = 2;
    // 自定义detail
    map<string, string> detail = 3;
}

message NewFaceSetRequest {
    string name = 1;
}

message NewFaceSetResponse {
    FaceSet face_set = 1;
}

message DeleteFaceSetRequest {
    // FaceSet.id
    string face_set_id = 1;
}

message DeleteFaceSetResponse {}

message UpdateFaceSetRequest {
    FaceSet face_set = 1;
}

message UpdateFaceSetResponse {
    FaceSet face_set = 1;
}

message ListFaceSetsRequest {}

message ListFaceSetsResponse {
    repeated FaceSet face_sets = 1;
}

message AddFaceRequest {
    // FaceSet.id
    string face_set_id = 1;
    // 待识别添加的人脸图片
    bytes face_img = 2;
    // 自定义信息数据
    map<string, string> detail = 3;
}

message AddFaceResponse {
    // 识别结果唯一值
    string face_token = 1;
}

message RemoveFaceRequest {
    // FaceSet.id
    string face_set_id = 1;
    // FaceDetail.token
    string face_token = 2;
}

message RemoveFaceResponse {}

message FaceDetailRequest {
    // FaceSet.id
    string face_set_id = 1;
    string face_token = 2;
    // 是否返回face_img
    bool with_face_img = 3;
}

message FaceDetailResponse {
    FaceDetail face_detail = 1;
}

message ListFaceDetailsRequest {
    // FaceSet.id
    string face_set_id = 1;
    // 结果总数限制
    // 默认:10
    uint32 limit = 2;
    // 结果匹配offset
    // 默认:0
    uint32 offset = 3;
}

message ListFaceDetailsResponse {
    FaceSet face_set = 1;
    repeated FaceDetail face_details = 2;
    // FaceSet中Face总数
    uint32 total = 3;
}
